<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>multiple_object_tracking_lidar</name>
  <version>1.0.5</version>
  <description>ROS 2 package for multiple objects detection, tracking, and classification from LiDAR point clouds.</description>

  <maintainer email="praveen.palanisamy@outlook.com">Praveen Palanisamy</maintainer>
  <license>MIT</license>

  <author email="praveen.palanisamy@outlook.com">Praveen Palanisamy</author>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core runtime/compile deps (ROS 2 Jazzy) -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>visualization_msgs</depend>
  <depend>opencv</depend>

  <!-- Optional (있으면 사용, 없으면 무시) -->
  <depend>cv_bridge</depend>

  <!-- Tests -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
